--- a/bib.bib
+++ b/bib.bib
@@ -9042,3 +9042,62 @@ the Simulated Greenland Surface Mass Balance},
   year={2016}
 }
 
+@article{PETAL1995CD,
+  title={The impact of horizontal resolution on moist processes in the ECMWF model},
+  author={Phillips, Thomas J and Corsetti, Lisa C and Grotch, Stanley L},
+  journal={Climate dynamics},
+  volume={11},
+  number={2},
+  pages={85-102},
+  year={1995},
+  publisher={Springer}
+}
+
+@article{HETAL2006JC,
+  title={Evaluation of the hydrological cycle in the ECHAM5 model},
+  author={Hagemann, Stefan and Arpe, Klaus and Roeckner, Erich},
+  journal={Journal of climate},
+  volume={19},
+  number={16},
+  pages={3810--3827},
+  year={2006}
+}
+
+@article{RETAL2006JC,
+  title={Sensitivity of simulated climate to horizontal and vertical resolution in the ECHAM5 atmosphere model},
+  author={Roeckner, E and Brokopf, R and Esch, M and Giorgetta, MA and Hagemann, S and Kornblueh, L and Manzini, E and Schlese, U and Schulzweida, U},
+  journal={Journal of Climate},
+  volume={19},
+  number={16},
+  pages={3771--3791},
+  year={2006}
+}
+
+@article{N1994ECMWF,
+  title={Extended versions of the convective parametrization scheme at ECMWF and their impact on the mean and transient activity of the model in the tropics.},
+  author={Nordeng, Thor Erik},
+  journal={Research Department Technical Memorandum},
+  volume={206},
+  pages={1--41},
+  year={1994}
+}
+
+@article{T1989MWR,
+  title={A comprehensive mass flux scheme for cumulus parameterization in large-scale models},
+  author={Tiedtke, MICHAEL},
+  journal={Monthly weather review},
+  volume={117},
+  number={8},
+  pages={1779--1800},
+  year={1989}
+}
+
+@article{GR1990MWR,
+  title={A mass flux convection scheme with representation of cloud ensemble characteristics and stability-dependent closure},
+  author={Gregory, D and Rowntree, PR},
+  journal={Monthly Weather Review},
+  volume={118},
+  number={7},
+  pages={1483--1506},
+  year={1990}
+}
