--- a/resolution-revised.tex
+++ b/resolution-revised.tex
@@ -27,7 +27,7 @@ Advances in high performance computing make it possible to run atmospheric gener
 
 \section{Introduction}
 
-An increasing number of Atmospheric General Circulation Models (AGCMs) are being developed to maximize efficiency on massively parallel systems, permitting regionally-refined high-resolution, or even globally high-resolution weather ($\Delta x \leq 5$ km) and climate ($\Delta x \leq 50$ km) simulations \citep{SMTMN2008JCP,MPASatm,Z2014QJRMS,HETAL2016JCLIM,DCMIP16,LetAl2018JAMES}. These models are built using unstructured meshes that allows for substantial grid flexibility, but lack physical parameterizations ({\em{physics}}) which behave consistently as the truncation scale of the model changes with different grid resolutions, referred to as scale-aware physics. The most common approach towards developing scale-aware physics is through the lens of limited area, large-eddy simulations \citep[e.g.,][]{PC2008JAS,AW2013JAS,SZ2018JCLIM}. By subsequently filtering large-eddy solutions to lower-resolution grids, a relationship between first- and higher-order moments may be understood and ultimately parameterized as a function of grid resolution. While this approach is necessary for developing scale-aware physics, it is not sufficient. The equations of motions have inherent scale dependencies, and the properties of dynamical modes are a function of native grid resolution \citep{O1981JAS,WETAL1997MWR,PG2006JAS,JR2016QJRMS}. Scale-aware physics should also recognize these native grid dependencies.
+An increasing number of Atmospheric General Circulation Models (AGCMs) are being developed to maximize efficiency on massively parallel systems, permitting regionally-refined high-resolution, or even globally high-resolution weather ($\Delta x \leq 5$ km) and climate ($\Delta x \leq 50$ km) simulations \citep{SMTMN2008JCP,MPASatm,Z2014QJRMS,HETAL2016JCLIM,DCMIP16,LetAl2018JAMES}. These models are built using unstructured meshes that {\color{red}{allow}} for substantial grid flexibility, but lack physical parameterizations ({\em{physics}}) which behave consistently as the truncation scale of the model changes with different grid resolutions, referred to as scale-aware physics. The most common approach towards developing scale-aware physics is through the lens of limited area, large-eddy simulations \citep[e.g.,][]{PC2008JAS,AW2013JAS,SZ2018JCLIM}. By subsequently filtering large-eddy solutions to lower-resolution grids, a relationship between first- and higher-order moments may be understood and ultimately parameterized as a function of grid resolution. While this approach is necessary for developing scale-aware physics, it is not sufficient. The equations of motions have inherent scale dependencies, and the properties of dynamical modes are a function of native grid resolution \citep{O1981JAS,WETAL1997MWR,PG2006JAS,JR2016QJRMS}. Scale-aware physics should also recognize these native grid dependencies.
 
 {\color{red}{Conventional physics packages interact with the adiabatic dynamics to produce non- or weakly- converging solutions with increasing resolution ({\em{resolution}} refers to {\em{horizontal resolution}} hereafter). Although some characteristics of resolution sensitivity are model dependent, others are common across different AGCMs and indicate a common mechanism. For example, increasing resolution lends itself to greater stratiform precipitation and reduced parameterized convective precipitation in the Hadley Centre climate model \citep[HadAM3;][]{PS2002CD}, the Max Planck Institute for Meteorology model \citep[ECHAM5;][]{HETAL2006JC} and the National Center for Atmospheric Research (NCAR) Community Climate Model \citep[CCM2;][see Figure~\ref{fig:cam-history}]{WETAL1995CD}. So while the purpose of this study is to provide a process-level understanding of resolution sensitivity in the NCAR models, these results are useful for understanding resolution sensitivity in models that exhibit similar behavior.}}
 
@@ -93,7 +93,7 @@ The simulations use the CAM6 physics package. The Cloud Layers Unified by Binorm
 
 \subsection{Experimental Design},\label{sec:ed}
 
-The convergence experiment is performed in an aqua-planet configuration \citep{NH2000ASL,MWO2016JAMES}, an all ocean planet with fixed, zonally symmetric sea surface temperatures modeled after present day Earth \citep[$QOBS$ in][]{NH2000ASL}. The aqua-planets are in a perpetual equinox, and aerosols are largely absent from the simulations. Each simulation is ran for one simulated year. Six different horizontal grids are used in this study, which are provided in Table~\ref{tbl:table1}. In addition to the six simulations used in the convergence experiment, an ensemble of 24 simulations containing different model parameters (e.g., using the lower resolution physics grid) and across different resolutions are ran for one year in order to increase confidence in assessing resolution sensitivity in this study. All analyses exclude the first month of the simulations, which is sufficient to avoid the spin-up period; the model comes into global energy balance after about ten days (not shown). All calculations are performed on their native grids unless otherwise stated.
+The convergence experiment is performed in an aqua-planet configuration \citep{NH2000ASL,MWO2016JAMES}, an all ocean planet with fixed, zonally symmetric sea surface temperatures modeled after present day Earth \citep[$QOBS$ in][]{NH2000ASL}. The aqua-planets are in a perpetual equinox, and aerosols are largely absent from the simulations. Each simulation is {\color{red}{run}} for one simulated year. Six different horizontal grids are used in this study, which are provided in Table~\ref{tbl:table1}. In addition to the six simulations used in the convergence experiment, an ensemble of 24 simulations containing different model parameters (e.g., using the lower resolution physics grid) and across different resolutions are {\color{red}{run}} for one year in order to increase confidence in assessing resolution sensitivity in this study. All analyses exclude the first month of the simulations, which is sufficient to avoid the spin-up period; the model comes into global energy balance after about ten days (not shown). All calculations are performed on their native grids unless otherwise stated.
 
 The horizontal hyper-viscosity operators $\nu$ vary with resolution after \cite{HETAL2019JAMES}, also provided in Table~\ref{tbl:table1}. The values of $\nu$ are a factor 2.5 greater for divergence damping and are not shown. $\Delta t_{phys}$ is chosen to scale with resolution, in proportion to the grid spacing,
 \begin{equation}
@@ -219,7 +219,7 @@ p = \frac{exp{[b_0 + b_1 x]}}{1 + exp{[b_0 + b_1 x]}}, \label{eq:logreg}
 \end{equation}
 where $b_0$ and $b_1$ are the shape parameters of the exponential. The predictor is the instantaneous $\langle f_{d} \rangle \langle \omega_{d} \rangle$ of a grid column, and the predictand the binary $FREQZM$. The assumption is then that subsidence is the independent variable, which is reasonable considering the environment of subsiding regions is generally more stable than its surroundings, and the ZM scheme is modulated by the dilute CAPE stability calculation. Grid column regressions that are statistically significant at the $95\%$ level using a log-likelihood test \citep{WILKSBOOK} are retained for analysis. Since the aqua-planets have zonally symmetric boundary conditions, there is a zonally varying structure in the goodness of fit (R-value) and shape parameter $b_1$ (Figure~\ref{fig:4zonal}c,d).
 
-The zonal mean R-values indicate the greatest goodness of fit in the $\pm 10^{\circ}$ latitude band, hereafter referred to as the deep tropics. In this region, the shape parameter $b_1$ is large and negative (Figure~\ref{fig:4zonal}d), consistent with the idea that subsiding motion stabilizes the environment and actively depresses dilute CAPE and the activity of the ZM scheme in the simulations. The shape parameter becomes less negative in the deep tropics with resolution, likely due to the greater magnitude $\langle f_{d} \rangle \langle \omega_{d} \rangle$ with resolution, which requires a lower $b_1$ to predict the binary $FREQZM$. The R-values generally decrease with resolution indicating that there is degradation in the relationship with resolution. The logistic regression is less skillful in the subtropics, with skill declining even further in the mid-latitudes irregardless of resolution (Figure~\ref{fig:4zonal}c).
+The zonal mean R-values indicate the greatest goodness of fit in the $\pm 10^{\circ}$ latitude band, hereafter referred to as the deep tropics. In this region, the shape parameter $b_1$ is large and negative (Figure~\ref{fig:4zonal}d), consistent with the idea that subsiding motion stabilizes the environment and actively depresses dilute CAPE and the activity of the ZM scheme in the simulations. The shape parameter becomes less negative in the deep tropics with resolution, likely due to the greater magnitude $\langle f_{d} \rangle \langle \omega_{d} \rangle$ with resolution, which requires a lower $b_1$ to predict the binary $FREQZM$. The R-values generally decrease with resolution indicating that there is degradation in the relationship with resolution. The logistic regression is less skillful in the subtropics, with skill declining even further in the mid-latitudes irrespective of resolution (Figure~\ref{fig:4zonal}c).
 
 \subsubsection{Deep Tropics}
 
@@ -265,7 +265,7 @@ Figure~\ref{fig:cape-subt}a shows the dilute CAPE values computed from mean temp
 \label{fig:cape-subt}
 \end{figure}
 
-It is the lack of spread in dilute CAPE between ascending/descending regions that explains the declining skill in the logistic regression in the subtropics (Figure~\ref{fig:4zonal}c). Without a strong dependence of dilute CAPE on ascending/descending regimes, subsidence is not a very skillful predictor of depressing dilute CAPE below the threshold for convection. In contrast to the deep tropics, there is also no significant changes to the occurrence of subsiding grid columns with resolution; space-time weights of ascending/descending motion are more-or-less invariant with resolution (Figure~\ref{fig:cape-subt}b).
+It is the lack of spread in dilute CAPE between ascending/descending regions that explains the declining skill in the logistic regression in the subtropics (Figure~\ref{fig:4zonal}c). Without a strong dependence of dilute CAPE on ascending/descending regimes, subsidence is not a very skillful predictor of depressing dilute CAPE below the threshold for convection. In contrast to the deep tropics, there {\color{red}{are}} also no significant changes to the occurrence of subsiding grid columns with resolution; space-time weights of ascending/descending motion are more-or-less invariant with resolution (Figure~\ref{fig:cape-subt}b).
 
 \begin{figure}
 \begin{center}
@@ -303,7 +303,7 @@ The $n=-1$ power law scaling is {\color{red}{not necessarily}} in conflict with 
 \label{fig:2ke}
 \end{figure}
 
-An increase in resolved moisture fluxes through cloud base occurs with increasing resolution, and are balanced by an increase in stratiform precipitation rates. Through decomposing the stratiform precipitation into the components of the moisture flux, it is shown that the increase in stratiform precipitation rates with resolution is primarily due to the increase in resolved mass fluxes / vertical velocities with resolution. At higher resolutions, larger stratiform precipitation rates increasingly contribute to the increase in climatological stratiform precipitation rate, with smaller magnitude precipitation rates contributing less. The increasing occurrence of larger magnitude vertical velocities and stratiform precipitation rates at higher resolution is at odds with a similar analysis by \cite{TETAL2018CD} using a similar model. The authors suggests that their use of daily averaged fields obscured the covariance between vertical velocity and moisture (i.e., moisture flux), complicating the analysis. {\color{red}{As it is generally accepted that vertical velocities increase with resolution in most, if not all AGCMs, models other than CAM that show an increases in stratiform precipitation with resolution (HadAM3 and ECHAM5 in Figure~\ref{fig:cam-history}) are likely driven in a similar way by the increase in resolved moisture flux at cloud base.}}
+An increase in resolved moisture fluxes through cloud base occurs with increasing resolution, and are balanced by an increase in stratiform precipitation rates. Through decomposing the stratiform precipitation into the components of the moisture flux, it is shown that the increase in stratiform precipitation rates with resolution is primarily due to the increase in resolved mass fluxes / vertical velocities with resolution. At higher resolutions, larger stratiform precipitation rates increasingly contribute to the increase in climatological stratiform precipitation rate, with smaller magnitude precipitation rates contributing less. The increasing occurrence of larger magnitude vertical velocities and stratiform precipitation rates at higher resolution is at odds with a similar analysis by \cite{TETAL2018CD} using a similar model. The authors {\color{red}{suggest}} that their use of daily averaged fields obscured the covariance between vertical velocity and moisture (i.e., moisture flux), complicating the analysis. {\color{red}{As it is generally accepted that vertical velocities increase with resolution in most, if not all AGCMs, models other than CAM that show an increases in stratiform precipitation with resolution (HadAM3 and ECHAM5 in Figure~\ref{fig:cam-history}) are likely driven in a similar way by the increase in resolved moisture flux at cloud base.}}
 
 A strong negative correlation is discovered between the climatological, global mean activity of the \cite{ZM1995AO} deep convection scheme (ZM scheme) and global mean subsiding motion in the simulations. Since the ZM scheme is modulated by an entraining plume calculation, referred to as the dilute convective available potential energy (dilute CAPE), the authors sought to understand the influence of subsidence on dilute CAPE. In the deep tropics ($\pm 10^{\circ}$ latitude), subsiding regions have much smaller dilute CAPE values compared to ascending regions due to the influence of the drier subsiding environment on dilute CAPE. With increasing resolution and in the deep tropics, the occurrence of subsiding motion increases dramatically and at the expense of ascending motion, and the activity of the the ZM scheme decreases overall. This is consistent with the $\Delta x^{-1}$ scaling of the vertical velocities, e.g., a doubling of resolution can generate the same upward mass flux in just half the area. The increased efficiency of upward mass fluxes with resolution suggests that the occurrence of ascending motion can decrease with resolution while still maintaining statistical equilibrium with the large-scale forcing.
 
