--- a/resolution-revised.tex
+++ b/resolution-revised.tex
@@ -89,7 +89,7 @@ This study uses the spectral-element dynamical core option of Community Atmosphe
 
 The physics are evaluated on the finite-volume CSLAM grid, and the tendencies mapped back to the spectral element grid. The coupled system, referred to as CAM-SE-CSLAM, conserves energy, mass and preserves linear correlations between two reactive species to within machine precision \citep{HL2018MWR}. A coarser physics grid, containing $\frac{5}{9}$ fewer degrees of freedom than the dynamical core grid is also available as part of the CAM-SE-CSLAM package \citep{HETAL2019JAMES}. This lower-resolution physics grid is used in this study, but only as a member of a perturbed parameter ensemble and not in the control convergence experiment. The dynamics time-step is subcycled within a longer physics time-step $\Delta t_{phys}$, and the temperature and momentum increments from the physics are divided by the number of subcycles and added to the dynamical core at the beginning of each subcycle. The full moisture increment from the physics is applied only at the start of the first subcycle to conserve tracer mass \citep[$ftype=2$ option in][]{LW2019JAMES}.
 
-The simulations use the CAM6 physics package. The Cloud Layers Unified by Binormals \citep[CLUBB][]{GETAL2002JAS,BOG2013JCLIM} is an assumed filtered density function \citep{G1992JFM} high-order closure model that handles shallow convection, planetary boundary layer mixing and cloud macrophysics. The macrophyiscs are coupled with a two-moment bulk cloud microphysics scheme with prognostic precipitation \citep{MG2}, and microphysics are coupled with the three mode Modular Aerosol Model \citep{MAM}. The combined macrophysics/microphysics routines generate stratiform clouds and stratiform precipitation. Deep convection is parameterized using a quasi-equilibrium mass flux scheme \citep{ZM1995AO} and an entraining plume calculation \citep[referred to as the dilute convective available potential energy, or {\em{dilute CAPE}} hereafter;][]{RB1992JAS, NRJ2008JC} is used as a convective trigger (convection occurs if dilute CAPE $\geq 70$ J/kg), and for closing the mass fluxes in the cloud ensemble. The deep convection scheme also parameterizes convective momentum transport \citep{RR2008JC}.
+The simulations use the CAM6 physics package. The Cloud Layers Unified by Binormals \citep[CLUBB][]{GETAL2002JAS,BOG2013JCLIM} is an assumed filtered density function \citep{G1992JFM} high-order closure model that handles shallow convection, planetary boundary layer mixing and cloud macrophysics. The {\color{red}{macrophysics}} are coupled with a two-moment bulk cloud microphysics scheme with prognostic precipitation \citep{MG2}, and microphysics are coupled with the three mode Modular Aerosol Model \citep{MAM}. The combined macrophysics/microphysics routines generate stratiform clouds and stratiform precipitation. Deep convection is parameterized using a quasi-equilibrium mass flux scheme \citep{ZM1995AO} and an entraining plume calculation \citep[referred to as the dilute convective available potential energy, or {\em{dilute CAPE}} hereafter;][]{RB1992JAS, NRJ2008JC} is used as a convective trigger (convection occurs if dilute CAPE $\geq 70$ J/kg), and for closing the mass fluxes in the cloud ensemble. The deep convection scheme also parameterizes convective momentum transport \citep{RR2008JC}.
 
 \subsection{Experimental Design},\label{sec:ed}
 
@@ -181,13 +181,13 @@ $\overline{P_s}$ can be expressed as the double sum of the product of the time m
 \end{equation}
 where the subscript $850$ is dropped from $\omega$ and $q$ for brevity. $f_s$ is a measure of the occurrence of a particular combination $\left( \omega_i , q_j \right)$ in a simulation, and $M_s$ the mean stratiform precipitation rate associated with the combination $\left( \omega_i , q_j \right)$. Their product $f_s M_s$ is then the contribution of the combination $\left( \omega_i , q_j \right)$ to $\overline{P_s}$.
 
-Figure~\ref{fig:pdecomp} shows plots of the terms $M_s$ and $f_s M_s$ for all resolutions. The plots are computed using 6-hourly instantaneous output of $\omega_{850}$ and $q_{850}$, with 0.05 Pa/s and 0.4 g/kg bin widths, respectively. Bins in  $\left( \omega_{i} , q_{j} \right)$ space with $f_s <1 \times 10^{-5}$ are masked out, which is a somewhat arbitrary, but reasonable cut-off for a bins' contribution to $\overline{P_s}$. The $M_s$ plots (left column) show that larger magnitude $\omega_{850}$ correspond to larger magnitude stratiform precipitation rates, while the impact of changing $q_{850}$ on $M_s$ is less clear. The changes in $M_s$ with resolution are subtle, while the changes in $f_s$ with resolution are large (not shown). The changes to $f_s$ can be inferred from the larger space of $\left( \omega_i , q_j \right)$ plotted at higher resolutions, indicating that larger magnitude $\omega_{850}$ values are occurring more frequently at higher resolutions, above the cutoff for plotting. The $f_s M_s$ plots (right column) clearly shows that larger magnitude $\omega_{850}$, and therefore larger magnitude stratiform precipitation rates, are contributing to the increase in $\overline{P_s}$ with resolution. In contrast, smaller magnitude $\omega_{850}$ and hence smaller stratiform precipitation rates contribute less and less to $\overline{P_s}$ with increasing resolution.
+Figure~\ref{fig:pdecomp} shows plots of the terms $M_s$ and $f_s M_s$ for all resolutions. The plots are computed using 6-hourly instantaneous output of $\omega_{850}$ and $q_{850}$, with 0.05 Pa/s and 0.4 g/kg bin widths, respectively. Bins in  $\left( \omega_{i} , q_{j} \right)$ space with $f_s <1 \times 10^{-5}$ are masked out, which is a somewhat arbitrary, but reasonable cut-off for a bins' contribution to $\overline{P_s}$ ({\color{red}{all unmasked values of $M_s$ and $f_s$ are shown in the  supplementary materials.}}). The $M_s$ plots (left column) show that larger magnitude $\omega_{850}$ correspond to larger magnitude stratiform precipitation rates, while the impact of changing $q_{850}$ on $M_s$ is less clear. The changes in $M_s$ with resolution are subtle, while the changes in $f_s$ with resolution are large (not shown). The changes to $f_s$ can be inferred from the larger space of $\left( \omega_i , q_j \right)$ plotted at higher resolutions, indicating that larger magnitude $\omega_{850}$ values are occurring more frequently at higher resolutions, above the cutoff for plotting. The $f_s M_s$ plots (right column) clearly shows that larger magnitude $\omega_{850}$, and therefore larger magnitude stratiform precipitation rates, are contributing to the increase in $\overline{P_s}$ with resolution. In contrast, smaller magnitude $\omega_{850}$ and hence smaller stratiform precipitation rates contribute less and less to $\overline{P_s}$ with increasing resolution.
 
 \begin{figure}
 \begin{center}
 \noindent\includegraphics[width=20pc,angle=0]{figs/temp_pdecomp.pdf}\\
 \end{center}
-\caption{Decomposition of the climatological stratiform precipitation rates, averaged over the $\pm 15^{\circ}$ latitude band into $\omega_{850}$ and $q_{850}$ environmental conditions. Left column shows the time mean magnitude term $M\left( \omega_i , q_j \right)$ and the right column is the magnitude term multiplied by the space-time frequency term $f\left( \omega_i , q_j \right) M\left( \omega_i , q_j \right)$. Integrals over $f M$ gives the climatological, area averaged stratiform precipitation rate. Panel labels denote the grid resolution of the model run.}
+\caption{Decomposition of the climatological stratiform precipitation rates, averaged over the $\pm 15^{\circ}$ latitude band into $\omega_{850}$ and $q_{850}$ environmental conditions. Left column shows the time mean magnitude term $M\left( \omega_i , q_j \right)$ and the right column is the magnitude term multiplied by the space-time frequency term $f\left( \omega_i , q_j \right) M\left( \omega_i , q_j \right)$. Integrals over $f M$ gives the climatological, area averaged stratiform precipitation rate. Panel labels denote the grid resolution of the model run. {\color{red}{See supplementary materials for all the unmasked values of both $M_s$ and $f_s$.}}}
 \label{fig:pdecomp}
 \end{figure}
 
